--- a/public/index.html
+++ b/public/index.html
@@ -15,7 +15,8 @@
     <link rel="stylesheet" href="/styles/nav.css" type="text/css" />
     <!-- Header CSS -->
     <link rel="stylesheet" href="/styles/header.css" type="text/css" />
-
+    <!--New Tweet CSS-->
+    <link rel="stylesheet" href="/styles/new-tweet.css" type="text/css" />
     <!-- External JS -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
 
@@ -42,13 +43,16 @@
 
     <!-- Page-specific (main) content here -->
     <main class="container">
-      <p>Hello</p>
-      <p>Hello</p>
-      <p>Hello</p>
-      <p>Hello</p>
-      <p>Hello</p>
-      <p>Hello</p>
-      <p>Hello</p>
+      <section class="new-tweet">
+        <h2>Compose Tweet</h2>
+        <form method = "POST" action ="/tweets">
+          <div id = "formTop">
+          <textarea name="text" id="tweet-text" placeholder="What are you humming about?"></textarea>
+        </div>
+          <button type="submit">Tweet</button>
+          <output name="counter" class="counter" for="tweet-text">140</output>
+        </form>
+      </section>
       
 
     </main>
