--- a/public/index.html
+++ b/public/index.html
@@ -49,11 +49,11 @@
     <main class="container">
       <section class="new-tweet">
         <h2>Compose Tweet</h2>
-        <form method = "POST" action ="/tweets">
+        <form class="form" method="POST" action="/tweets">
           <div id = "formTop">
           <textarea name="text" id="tweet-text" placeholder="What are you humming about?"></textarea>
         </div>
-          <button type="submit">Tweet</button>
+          <button type="submit"class="tweetButton">Tweet</button>
           <output name="counter" class="counter" for="tweet-text">140</output>
         </form>
       </section>
