Added proper error message

--- a/public/index.html
+++ b/public/index.html
@@ -49,6 +49,7 @@
     <main class="container">
       <section class="new-tweet">
         <h2>Compose Tweet</h2>
+        <p class = "error">Error</p>
         <form class="form" method="POST" action="/tweets">
           <div id = "formTop">
           <textarea name="text" id="tweet-text" placeholder="What are you humming about?"></textarea>
