--- a/public/index.html
+++ b/public/index.html
@@ -30,17 +30,18 @@
 
   <body>
     <!-- Top nav bar (fixed) -->
+    <div class="flex-container">
     <nav>
       <span id ="bungee">tweeter</span>
     </nav>
 
     <header>
-      <div>
+      <div id = "top">
           <img src="/images/profile-hex.png"> 
       </div>
       <br>
       <div>
-          <h2>Your Name</h2>
+          <h2>Brent Carey</h2>
       </div>
   </header>
    
@@ -58,6 +59,7 @@
           <output name="counter" class="counter" for="tweet-text">140</output>
         </form>
       </section>
+      <section class="tweet-container"></section>
      
     </main>
 
